# craft-code

./: README.md  pyproject.toml
scripts/: draft_agent.py  simple_llm_call.py
src/craft_code/: cli.py  core.py  tools.py  utils.py
src/craft_code/config/: loader.py  prompts.py
src/craft_code/ui/: app.py  widgets.py
