[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "craft-code"
version = "0.1.2"
description = "Craft Code – a local developer assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.6.1",
    "pathspec>=0.12.0",
    "pydantic>=2.0.0",
    "textual>=6.6.0",
    "tomli-w>=1.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
craft-code = "craft_code.cli:main"
